KTTL-1885 - [FE - Small and Medium Desktop] Research > Statistics - The component is not showing up correctly on small and medium desktops (#1175)

--- a/src/theme/css/frontend/_statistics.scss
+++ b/src/theme/css/frontend/_statistics.scss
@@ -15,6 +15,7 @@
 
   &__container {
     @apply container mx-auto;
+    @apply tw-grid;
 
     @screen xl {
       @apply grid tw-grid-desktop;
@@ -22,10 +23,14 @@
   }
 
   &__heading {
-    @apply font-semibold text-px32 leading-px40;
+    @apply font-semibold text-px32 leading-px40 col-span-full;
 
     @screen md {
-      @apply text-px32 leading-px42;
+      @apply text-px32 leading-px42 col-start-2 col-span-6;
+    }
+
+    @screen lg {
+      @apply col-span-10 col-start-2 text-px38 leading-px48 tracking-em_001;
     }
 
     @screen xl {
@@ -35,10 +40,19 @@
   }
 
   &__description {
-    @apply text-px18 leading-px24 tracking-px05 mt-px16;
+    @apply text-px18 leading-px24 tracking-px05 mt-px16 col-span-full;
 
     @screen md {
-      @apply text-px18 leading-px22;
+      @apply text-px18 leading-px22 col-start-2 col-span-6;
+    }
+
+    @screen lg {
+      @apply col-span-10 col-start-2 text-px20 leading-px30 tracking-px05;
+    }
+
+    @screen lg2 {
+      @apply mx-auto col-span-full col-start-1;
+      max-width: rem-calc(822);
     }
 
     @screen xl {
@@ -48,10 +62,25 @@
   }
 
   &__cards-container {
-    @apply mt-px60;
+    @apply mt-px60 col-span-full;
+    @include bleed;
+
+    &:not(.swiper-container-initialized) {
+      .swiper-pagination {
+        @apply hidden;
+      }
+    }
 
     @screen md {
-      @apply mt-px50;
+      @apply mt-px50 mx-0 col-span-6 col-start-2;
+    }
+
+    @screen lg {
+      @apply col-span-10 col-start-2;
+    }
+
+    @screen lg2 {
+      @apply mt-px80 col-span-full col-start-1;
     }
 
     @screen xl {
@@ -62,19 +91,32 @@
   &__cards-wrapper {
     @apply h-auto;
 
-    @screen xl {
-      @apply grid tw-grid-desktop;
+    @screen lg {
+      @apply flex justify-center gap-x-md flex-wrap gap-y-px58;
+    }
+
+    @screen lg2 {
+      @apply grid tw-grid-medium-desktop;
     }
   }
 
   &__card {
-    @screen xl {
-      @apply col-span-4;
+    @screen lg {
+      @apply flex-shrink-0;
+      width: calc((100% - theme('gap.md')) / 2);
+    }
+
+    @screen lg2 {
+      @apply col-span-4 w-full;
     }
   }
 
   &__card-heading {
     @apply font-semibold text-px80 leading-px90 tracking-em_001;
+
+    @screen lg {
+      @apply text-px70 leading-px90 tracking-em_001;
+    }
   }
 
   &__card-body {
@@ -84,6 +126,10 @@
       @apply mt-px15 max-w-px248;
     }
 
+    @screen lg {
+      @apply max-w-none;
+    }
+
     @screen xl {
       @apply max-w-none mt-px16;
       @apply text-px22 leading-px28 tracking-em_001;
@@ -91,10 +137,10 @@
   }
 
   &__cta-wrap {
-    @apply mt-px50;
+    @apply mt-px50 col-span-full;
 
     @screen xl {
-      @apply col-span-full text-center;
+      @apply text-center;
     }
   }
 
@@ -108,5 +154,29 @@
 
   .swiper-pagination-bullet {
     @apply bg-current;
+  }
+
+  // Mobile-only Carousel layout
+  &[data-carousel-layout="mobile_only"] {
+    .statistics__cards-wrapper {
+      @screen md {
+        @apply flex justify-center gap-x-md flex-wrap gap-y-px58;
+      }
+
+      @screen lg2 {
+        @apply grid tw-grid-medium-desktop;
+      }
+    }
+
+    .statistics__card {
+      @screen md {
+        @apply flex-shrink-0;
+        width: calc((100% - theme('gap.md')) / 2);
+      }
+
+      @screen lg2 {
+        @apply w-full;
+      }
+    }
   }
 }
